@@ -36,6 +36,7 @@ Bugs fixed:
 - 2997928 Namespace incorrect in test_providers
 - 2997961 IndRetryTest.sh leaves IndicationSubscription modded
 - 3001879 Remove SLP sections from internalProvider
+- 3001896 httpAdapter can crash on bad content length
 
 Changes in 1.3.7
 ================
